[hotfix][table] Fix compilation with jdk11